Hotel view left image z-index fix.
The z-index of the left image is fixed so that the left image goes over the right image and behind your avatar.
Noticeable when you shrink your client while being on the hotel view.
It now works like Official Habbo flash client ui.

--- a/src/components/hotel-view/HotelView.scss
+++ b/src/components/hotel-view/HotelView.scss
@@ -49,6 +49,7 @@
 		right:0;
 		bottom: 0;
 		left: 0;
+        z-index: 1;
 		animation-iteration-count: 1;
 		animation-name: slideUp;
 		animation-duration: 1s;
